JWT Token bazlı yetkilendirme Tamamlandı.

--- a/WepAPI/appsettings.json
+++ b/WepAPI/appsettings.json
@@ -1,4 +1,10 @@
 {
+  "TokenOptions": {
+    "Audience": "guven@guven.com",
+    "Issuer": "guven@guven.com",
+    "AccessTokenExpiration": 10,
+    "SecurityKey": "mysupersecretkeymysupersecretkey"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
